
include_directories(../xlsxio/include)
include_directories(../../common)
set(PRODUCT_SRC_LIST ../../common/config.cpp ../../common/log.cpp reader_writer.cpp attendance.cpp main.cpp)
add_executable(attendance ${PRODUCT_SRC_LIST})

set(main_name attendance)
target_link_libraries(${main_name} xlsxio_write)
target_link_libraries(${main_name} xlsxio_read)
target_link_libraries(${main_name} boost_system)
target_link_libraries(${main_name} ssl)
target_link_libraries(${main_name} mysqlcppconn)
target_link_libraries(${main_name} boost_program_options) 
target_link_libraries(${main_name} boost_filesystem) 
target_link_libraries(${main_name} boost_coroutine) 
target_link_libraries(${main_name} boost_thread) 
target_link_libraries(${main_name} pthread) 
target_link_libraries(${main_name} boost_context) 
target_link_libraries(${main_name} boost_date_time) 
target_link_libraries(${main_name} crypto) 
target_link_libraries(${main_name} boost_regex) 
target_link_libraries(${main_name} boost_timer) 
target_link_libraries(${main_name} boost_signals) 
target_link_libraries(${main_name} boost_locale)
target_link_libraries(${main_name} boost_log)
target_link_libraries(${main_name} gd)
set_target_properties(${main_name} PROPERTIES COMPILE_FLAGS "-std=c++14")
if(TCMALLOC_INCLUDE_DIR AND TCMALLOC_LIBRARY)
  set_target_properties(${main_name} PROPERTIES COMPILE_FLAGS "-DHAVE_TCMALLOC")
  target_link_libraries(${main_name} tcmalloc_and_profiler)
endif()